# nooxit-demo

./: README.md  config-ldap.yml  create-client.sh  docker-compose.yml
auth/: .env  Dockerfile  pyproject.toml
auth/app/: config.py  db.py  hydra.py  main.py
auth/app/endpoints/: consent.py  login.py
auth/app/static/: styles.css
auth/app/templates/: consent.html  login.html
backend/: .env  Dockerfile  Pipfile
backend/app/: config.py  main.py  models.py
backend/app/db/: members.py  users.py
backend/app/endpoints/: auth.py  resources.py
backend/app/helpers/: deps.py  dex.py  oauth2.py
ldap/: Dockerfile  config-ldap.ldif
web/: package-lock.json  package.json
web/src/: App.css  App.js
web/src/components/: ErrorMessage.js  LoadingPage.js  Login.js  Nav.css  Nav.js  ResourceItem.js  UserDetails.js
web/src/helpers/: constants.js  utils.js
web/src/hooks/: api-resource.js  auth.js
web/src/pages/: Home.js  Members.js  Users.js
web/src/routes/: index.js
web/src/services/: api.js
